antlr/src/parser/ilocParser.java
// Generated from iloc.g4 by ANTLR 4.7.2
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ilocParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADD=1, ADDI=2, AND=3, ANDI=4, C2C=5, C2I=6, CALL=7, CBR=8, CBRNE=9, CBR_LT=10, 
		CBR_LE=11, CBR_EQ=12, CBR_NE=13, CBR_GT=14, CBR_GE=15, CLOADAI=16, CLOADAO=17, 
		CLOAD=18, CMP_LT=19, CMP_LE=20, CMP_EQ=21, CMP_NE=22, CMP_GT=23, CMP_GE=24, 
		COMP=25, CREAD=26, CSTOREAI=27, CSTOREAO=28, CSTORE=29, CWRITE=30, DATA=31, 
		DIVI=32, DIV=33, EXIT=34, F2F=35, F2I=36, FADD=37, FCALL=38, FCOMP=39, 
		FCMP_LT=40, FCMP_LE=41, FCMP_EQ=42, FCMP_NE=43, FCMP_GT=44, FCMP_GE=45, 
		FDIV=46, FLOADAI=47, FLOADAO=48, FLOAD=49, FLOAT=50, FMULT=51, FRAME=52, 
		FREAD=53, FRET=54, FWRITE=55, FSTOREAI=56, FSTOREAO=57, FSTORE=58, FSUB=59, 
		GLOBAL=60, I2F=61, I2I=62, ICALL=63, IRCALL=64, IREAD=65, IRET=66, IWRITE=67, 
		JUMPI=68, JUMP=69, LOADAI=70, LOADAO=71, LOAD=72, LOADI=73, LSHIFTI=74, 
		LSHIFT=75, MALLOC=76, MOD=77, MULTI=78, MULT=79, NOP=80, NOT=81, OR=82, 
		ORI=83, RSHIFTI=84, RSHIFT=85, RET=86, STOREAI=87, STOREAO=88, STORE=89, 
		STRING=90, SUBI=91, SUB=92, SWRITE=93, TBL=94, TESTEQ=95, TESTGE=96, TESTGT=97, 
		TESTLE=98, TESTLT=99, TESTNE=100, TEXT=101, XOR=102, XORI=103, ASSIGN=104, 
		ARROW=105, LON=106, SEMICOLON=107, LBRACKET=108, RBRACKET=109, COMMA=110, 
		VR=111, STRING_CONST=112, LABEL=113, FLOAT_CONST=114, NUMBER=115, WS=116, 
		COMMENT=117;
	public static final int
		RULE_program = 0, RULE_data = 1, RULE_procedures = 2, RULE_procedure = 3, 
		RULE_ilocInstruction = 4, RULE_frameInstruction = 5, RULE_operationList = 6, 
		RULE_operation = 7, RULE_pseudoOp = 8, RULE_virtualReg = 9, RULE_immediateVal = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "data", "procedures", "procedure", "ilocInstruction", "frameInstruction", 
			"operationList", "operation", "pseudoOp", "virtualReg", "immediateVal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'add'", "'addI'", "'and'", "'andI'", "'c2c'", "'c2i'", "'call'", 
			"'cbr'", "'cbrne'", "'cbr_LT'", "'cbr_LE'", "'cbr_EQ'", "'cbr_NE'", "'cbr_GT'", 
			"'cbr_GE'", "'cloadAI'", "'cloadAO'", "'cload'", "'cmp_LT'", "'cmp_LE'", 
			"'cmp_EQ'", "'cmp_NE'", "'cmp_GT'", "'cmp_GE'", "'comp'", "'cread'", 
			"'cstoreAI'", "'cstoreAO'", "'cstore'", "'cwrite'", "'.data'", "'divI'", 
			"'div'", "'exit'", "'f2f'", "'f2i'", "'fadd'", "'fcall'", "'fcomp'", 
			"'fcmp_LT'", "'fcmp_LE'", "'fcmp_EQ'", "'fcmp_NE'", "'fcmp_GT'", "'fcmp_GE'", 
			"'fdiv'", "'floadAI'", "'floadAO'", "'fload'", "'.float'", "'fmult'", 
			"'.frame'", "'fread'", "'fret'", "'fwrite'", "'fstoreAI'", "'fstoreAO'", 
			"'fstore'", "'fsub'", "'.global'", "'i2f'", "'i2i'", "'icall'", "'ircall'", 
			"'iread'", "'iret'", "'iwrite'", "'jumpI'", "'jump'", "'loadAI'", "'loadAO'", 
			"'load'", "'loadI'", "'lshiftI'", "'lshift'", "'malloc'", "'mod'", "'multI'", 
			"'mult'", "'nop'", "'not'", "'or'", "'orI'", "'rshiftI'", "'rshift'", 
			"'ret'", "'storeAI'", "'storeAO'", "'store'", "'.string'", "'subI'", 
			"'sub'", "'swrite'", "'tbl'", "'testeq'", "'testge'", "'testgt'", "'testle'", 
			"'testlt'", "'testne'", "'.text'", "'xor'", "'xorI'", "'=>'", "'->'", 
			"':'", "';'", "'['", "']'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADD", "ADDI", "AND", "ANDI", "C2C", "C2I", "CALL", "CBR", "CBRNE", 
			"CBR_LT", "CBR_LE", "CBR_EQ", "CBR_NE", "CBR_GT", "CBR_GE", "CLOADAI", 
			"CLOADAO", "CLOAD", "CMP_LT", "CMP_LE", "CMP_EQ", "CMP_NE", "CMP_GT", 
			"CMP_GE", "COMP", "CREAD", "CSTOREAI", "CSTOREAO", "CSTORE", "CWRITE", 
			"DATA", "DIVI", "DIV", "EXIT", "F2F", "F2I", "FADD", "FCALL", "FCOMP", 
			"FCMP_LT", "FCMP_LE", "FCMP_EQ", "FCMP_NE", "FCMP_GT", "FCMP_GE", "FDIV", 
			"FLOADAI", "FLOADAO", "FLOAD", "FLOAT", "FMULT", "FRAME", "FREAD", "FRET", 
			"FWRITE", "FSTOREAI", "FSTOREAO", "FSTORE", "FSUB", "GLOBAL", "I2F", 
			"I2I", "ICALL", "IRCALL", "IREAD", "IRET", "IWRITE", "JUMPI", "JUMP", 
			"LOADAI", "LOADAO", "LOAD", "LOADI", "LSHIFTI", "LSHIFT", "MALLOC", "MOD", 
			"MULTI", "MULT", "NOP", "NOT", "OR", "ORI", "RSHIFTI", "RSHIFT", "RET", 
			"STOREAI", "STOREAO", "STORE", "STRING", "SUBI", "SUB", "SWRITE", "TBL", 
			"TESTEQ", "TESTGE", "TESTGT", "TESTLE", "TESTLT", "TESTNE", "TEXT", "XOR", 
			"XORI", "ASSIGN", "ARROW", "LON", "SEMICOLON", "LBRACKET", "RBRACKET", 
			"COMMA", "VR", "STRING_CONST", "LABEL", "FLOAT_CONST", "NUMBER", "WS", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "iloc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ilocParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(ilocParser.TEXT, 0); }
		public ProceduresContext procedures() {
			return getRuleContext(ProceduresContext.class,0);
		}
		public TerminalNode DATA() { return getToken(ilocParser.DATA, 0); }
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public List<IlocInstructionContext> ilocInstruction() {
			return getRuleContexts(IlocInstructionContext.class);
		}
		public IlocInstructionContext ilocInstruction(int i) {
			return getRuleContext(IlocInstructionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ilocVisitor ) return ((ilocVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATA:
			case TEXT:
				{
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DATA) {
					{
					setState(22);
					match(DATA);
					setState(23);
					data();
					}
				}

				setState(26);
				match(TEXT);
				setState(27);
				procedures();
				}
				break;
			case ADD:
			case ADDI:
			case AND:
			case ANDI:
			case C2C:
			case C2I:
			case CALL:
			case CBR:
			case CBRNE:
			case CBR_LT:
			case CBR_LE:
			case CBR_EQ:
			case CBR_NE:
			case CBR_GT:
			case CBR_GE:
			case CLOADAI:
			case CLOADAO:
			case CLOAD:
			case CMP_LT:
			case CMP_LE:
			case CMP_EQ:
			case CMP_NE:
			case CMP_GT:
			case CMP_GE:
			case COMP:
			case CREAD:
			case CSTOREAI:
			case CSTOREAO:
			case CSTORE:
			case CWRITE:
			case DIVI:
			case DIV:
			case EXIT:
			case F2F:
			case F2I:
			case FADD:
			case FCALL:
			case FCOMP:
			case FCMP_LT:
			case FCMP_LE:
			case FCMP_EQ:
			case FCMP_NE:
			case FCMP_GT:
			case FCMP_GE:
			case FDIV:
			case FLOADAI:
			case FLOADAO:
			case FLOAD:
			case FMULT:
			case FREAD:
			case FRET:
			case FWRITE:
			case FSTOREAI:
			case FSTOREAO:
			case FSTORE:
			case FSUB:
			case I2F:
			case I2I:
			case ICALL:
			case IRCALL:
			case IREAD:
			case IRET:
			case IWRITE:
			case JUMPI:
			case JUMP:
			case LOADAI:
			case LOADAO:
			case LOAD:
			case LOADI:
			case LSHIFTI:
			case LSHIFT:
			case MALLOC:
			case MOD:
			case MULTI:
			case MULT:
			case NOP:
			case NOT:
			case OR:
			case ORI:
			case RSHIFTI:
			case RSHIFT:
			case RET:
			case STOREAI:
			case STOREAO:
			case STORE:
			case SUBI:
			case SUB:
			case SWRITE:
			case TBL:
			case TESTEQ:
			case TESTGE:
			case TESTGT:
			case TESTLE:
			case TESTLT:
			case TESTNE:
			case XOR:
			case XORI:
			case LBRACKET:
			case LABEL:
				{
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(28);
					ilocInstruction();
					}
					}
					setState(31); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADD) | (1L << ADDI) | (1L << AND) | (1L << ANDI) | (1L << C2C) | (1L << C2I) | (1L << CALL) | (1L << CBR) | (1L << CBRNE) | (1L << CBR_LT) | (1L << CBR_LE) | (1L << CBR_EQ) | (1L << CBR_NE) | (1L << CBR_GT) | (1L << CBR_GE) | (1L << CLOADAI) | (1L << CLOADAO) | (1L << CLOAD) | (1L << CMP_LT) | (1L << CMP_LE) | (1L << CMP_EQ) | (1L << CMP_NE) | (1L << CMP_GT) | (1L << CMP_GE) | (1L << COMP) | (1L << CREAD) | (1L << CSTOREAI) | (1L << CSTOREAO) | (1L << CSTORE) | (1L << CWRITE) | (1L << DIVI) | (1L << DIV) | (1L << EXIT) | (1L << F2F) | (1L << F2I) | (1L << FADD) | (1L << FCALL) | (1L << FCOMP) | (1L << FCMP_LT) | (1L << FCMP_LE) | (1L << FCMP_EQ) | (1L << FCMP_NE) | (1L << FCMP_GT) | (1L << FCMP_GE) | (1L << FDIV) | (1L << FLOADAI) | (1L << FLOADAO) | (1L << FLOAD) | (1L << FMULT) | (1L << FREAD) | (1L << FRET) | (1L << FWRITE) | (1L << FSTOREAI) | (1L << FSTOREAO) | (1L << FSTORE) | (1L << FSUB) | (1L << I2F) | (1L << I2I) | (1L << ICALL))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (IRCALL - 64)) | (1L << (IREAD - 64)) | (1L << (IRET - 64)) | (1L << (IWRITE - 64)) | (1L << (JUMPI - 64)) | (1L << (JUMP - 64)) | (1L << (LOADAI - 64)) | (1L << (LOADAO - 64)) | (1L << (LOAD - 64)) | (1L << (LOADI - 64)) | (1L << (LSHIFTI - 64)) | (1L << (LSHIFT - 64)) | (1L << (MALLOC - 64)) | (1L << (MOD - 64)) | (1L << (MULTI - 64)) | (1L << (MULT - 64)) | (1L << (NOP - 64)) | (1L << (NOT - 64)) | (1L << (OR - 64)) | (1L << (ORI - 64)) | (1L << (RSHIFTI - 64)) | (1L << (RSHIFT - 64)) | (1L << (RET - 64)) | (1L << (STOREAI - 64)) | (1L << (STOREAO - 64)) | (1L << (STORE - 64)) | (1L << (SUBI - 64)) | (1L << (SUB - 64)) | (1L << (SWRITE - 64)) | (1L << (TBL - 64)) | (1L << (TESTEQ - 64)) | (1L << (TESTGE - 64)) | (1L << (TESTGT - 64)) | (1L << (TESTLE - 64)) | (1L << (TESTLT - 64)) | (1L << (TESTNE - 64)) | (1L << (XOR - 64)) | (1L << (XORI - 64)) | (1L << (LBRACKET - 64)) | (1L << (LABEL - 64)))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public List<PseudoOpContext> pseudoOp() {
			return getRuleContexts(PseudoOpContext.class);
		}
		public PseudoOpContext pseudoOp(int i) {
			return getRuleContext(PseudoOpContext.class,i);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).exitData(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ilocVisitor ) return ((ilocVisitor<? extends T>)visitor).visitData(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_data);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 50)) & ~0x3f) == 0 && ((1L << (_la - 50)) & ((1L << (FLOAT - 50)) | (1L << (GLOBAL - 50)) | (1L << (STRING - 50)))) != 0)) {
				{
				{
				setState(35);
				pseudoOp();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProceduresContext extends ParserRuleContext {
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public ProceduresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedures; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).enterProcedures(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).exitProcedures(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ilocVisitor ) return ((ilocVisitor<? extends T>)visitor).visitProcedures(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProceduresContext procedures() throws RecognitionException {
		ProceduresContext _localctx = new ProceduresContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procedures);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				procedure();
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FRAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureContext extends ParserRuleContext {
		public FrameInstructionContext frameInstruction() {
			return getRuleContext(FrameInstructionContext.class,0);
		}
		public List<IlocInstructionContext> ilocInstruction() {
			return getRuleContexts(IlocInstructionContext.class);
		}
		public IlocInstructionContext ilocInstruction(int i) {
			return getRuleContext(IlocInstructionContext.class,i);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ilocListener ) ((ilocListener)listener).exitProcedure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ilocVisitor ) return ((ilocVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}
